# ml-video-compression

./: .gitignore  README.md  flake.nix  notebook.ipynb  pyproject.toml
results/2scale/: results_100_epochs_2_scale.csv  results_10_epochs_2_scale.csv  results_20_epochs_2_scale.csv  results_30_epochs_2_scale.csv  results_50_epochs_2_scale.csv
results/4scale/: results_100_epochs_4_scale.csv  results_10_epochs_4_scale.csv
results/8scale/: results_100_epochs_8_scale.csv  results_10_epochs_8_scale.csv  results_20_epochs_8_scale.csv  results_30_epochs_8_scale.csv  results_50_epochs_8_scale.csv
src/: data.py  edsr.py  loss.py  preprocessing.py  utils.py
src/video_pipeline/: batch_process.py  datapipeline.py  plot_psnr_epochs.py
src/video_pipeline/results/: results_20_epochs_4_scale.csv  results_30_epochs_4_scale.csv  results_50_epochs_4_scale.csv
