[project]
name = "3"
version = "0.1.0"
description = ""
readme = "README.md"
authors = [
    { name = "Mateo Lelong", email = "mateo.lelong@epita.fr" },
    { name = "Samy Yacef", email = "samy.yacef@epita.fr" },
]
requires-python = ">=3.12"
dependencies = [
    "numpy>=1.26.1",
    "matplotlib>=3.8.0",
    "tensorflow[and-cuda]>=2.20.0",
    "tensorflow-datasets>=4.9.9",
    "jupyter>=1.1.1",
    "pandas>=2.3.3",
    "cv3>=1.3.2",
    "moviepy>=2.2.1",
]

[project.optional-dependencies]
dev = [
    "black>=23.9.1"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]
